--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Team</h2>
+        <h2>مقالات</h2>
         <p><span>Our Hardworking</span> <span class="description-title">Team</span></p>
       </div><!-- End Section Title -->
 
