--- a/new-index.html
+++ b/new-index.html
@@ -97,10 +97,10 @@
 
 </head>
 
-<body class="index-page">
+<body class="index-page" dir="ltr">
 
   <!-- Added ARIA landmarks for better accessibility -->
-  <header id="header" class="header sticky-top" role="banner">
+  <header id="header" class="header sticky-top" role="banner" dir="rtl">
 
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
@@ -150,7 +150,7 @@
   <main class="main" role="main">
 
     <!-- Hero Section -->
-    <section id="hero" class="hero section light-background text-right">
+    <section id="hero" class="hero section light-background text-right"  dir="rtl">
 
       <div class="container">
         <div class="row gy-4">
@@ -190,7 +190,7 @@
     </div>
 
     <!-- About Section -->
-    <section id="about" class="about section light-background" aria-labelledby="about-heading">
+    <section id="about" class="about section light-background" aria-labelledby="about-heading"  dir="rtl">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
@@ -258,6 +258,233 @@
 
     </section><!-- /About Section -->
 
+    <!-- Stats Section -->
+    <section id="stats" class="stats section" aria-labelledby="stats-heading"  dir="rtl">
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center">
+            <i class="bi bi-emoji-smile" aria-hidden="true"></i>
+            <div class="stats-item">
+              <span data-purecounter-start="0" data-purecounter-end="300" data-purecounter-duration="1" class="purecounter"></span>
+              <p>عملاءنا</p>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center">
+            <i class="bi bi-journal-richtext" aria-hidden="true"></i>
+            <div class="stats-item">
+              <span data-purecounter-start="0" data-purecounter-end="752" data-purecounter-duration="1" class="purecounter"></span>
+              <p>مشاريعنا</p>
+            </div>
+          </div><!-- End Stats Item -->
+
+          <div class="col-lg-4 col-md-12 d-flex flex-column align-items-center">
+            <i class="bi bi-headset" aria-hidden="true"></i>
+            <div class="stats-item">
+              <span data-purecounter-start="0" data-purecounter-end="1924" data-purecounter-duration="1" class="purecounter"></span>
+              <p>ساعات العمل منذ بدانا</p>
+            </div>
+          </div><!-- End Stats Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Stats Section -->
+
+    <!-- Services Section -->
+    <section id="services" class="services section" aria-labelledby="services-heading"  dir="rtl">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2 id="services-heading">خدماتنا</h2>
+        <p><span>استكشف ما يميز</span> <span class="description-title">خدماتنا</span></p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-door-open" aria-hidden="true"></i>
+              </div>
+              <a href="./assets/img/hoors/video/hoor-video-1.mp4" class="stretched-link glightbox btn-watch-video align-items-center" aria-label="مشاهدة فيديو عن خدمة من الباب للباب">
+                <h3>من الباب للباب</h3>
+              </a>
+              <p>نوصل عفشك من باب بيتك لباب بيتك الجديد، ننقلك كل قطعة بامان</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-car-front" aria-hidden="true"></i>
+              </div>
+              <a href="./assets/img/hoors/video/hoor-video-2.mp4" class="stretched-link glightbox btn-watch-video align-items-center" aria-label="مشاهدة فيديو عن خدمة التوصيل">
+                <h3>توصيل</h3>
+              </a>
+              <p>نوصل عفشك منغير تعب ، ومنغير كسر ، ومنغير تاخير</p>
+            </div>
+          </div><!-- End Service Item -->
+
+          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+            <div class="service-item position-relative">
+              <div class="icon">
+                <i class="bi bi-speedometer" aria-hidden="true"></i>
+              </div>
+              <a href="./assets/img/hoors/video/hoor-video-3.mp4" class="stretched-link glightbox btn-watch-video align-items-center" aria-label="مشاهدة فيديو عن خدمة السرعة في النقل">
+                <h3>!السرعة</h3>
+              </a>
+              <p>بسرعة البرق ننقل عفشك ، ما في اسرع منا ننجزك علي طول</p>
+            </div>
+          </div><!-- End Service Item -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Services Section -->
+
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact section" aria-labelledby="contact-heading" dir="rtl">
+      <!-- 
+        Added aria-labelledby for better section accessibility
+        Helps search engines understand the purpose of this section
+      -->
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2 id="contact-heading">اتصل بنا</h2> <!-- Added ID for aria-labelledby -->
+        <p><span>جاهزون لمساعدتك</span> <span class="description-title">في كل وقت</span></p>
+      </div>
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+          <div class="col-lg-5">
+            <div class="info-wrap">
+              <!-- Contact Info Item 1 -->
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+                <i class="bi bi-geo-alt flex-shrink-0" aria-hidden="true"></i>
+                <div>
+                  <h3>موقعنا</h3>
+                  <p>الكويت - جميع المناطق</p> <!-- More specific location helps local SEO -->
+                </div>
+              </div>
+
+              <!-- Contact Info Item 2 -->
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+                <i class="bi bi-telephone flex-shrink-0" aria-hidden="true"></i>
+                <div>
+                  <h3>اتصل بنا</h3>
+                  <!-- 
+                    Enhanced phone link with proper attributes
+                    aria-label helps screen readers and tel: helps mobile devices
+                  -->
+                  <p>
+                    <a href="tel:+96566401171" 
+                      aria-label="اتصل بنا على رقم ٦٦٤٠١١٧١">
+                      ٦٦٤٠١١٧١ <span dir="ltr">(+965)</span>
+                    </a>
+                  </p>
+                </div>
+              </div>
+
+              <!-- Contact Info Item 3 -->
+              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+                <i class="bi bi-envelope flex-shrink-0" aria-hidden="true"></i>
+                <div>
+                  <h3>البريد الإلكتروني</h3>
+                  <!-- 
+                    Enhanced email link with aria-label
+                    Helps screen readers and provides better context
+                  -->
+                  <p>
+                    <a href="mailto:info@hoor-movers.com" 
+                      aria-label="أرسل بريد إلكتروني إلى info@hoor-movers.com">
+                      info@hoor-movers.com
+                    </a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-7">
+            <!-- 
+              Enhanced form with proper accessibility attributes
+              Important for both usability and SEO
+            -->
+            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <div class="row gy-4">
+                <!-- Name Field -->
+                <div class="col-md-6">
+                  <label for="name-field" class="pb-2">اسمك الكامل</label> <!-- More descriptive label -->
+                  <input type="text" 
+                        name="name" 
+                        id="name-field" 
+                        class="form-control" 
+                        required
+                        aria-required="true"
+                        aria-label="أدخل اسمك الكامل">
+                </div>
+
+                <!-- Email Field -->
+                <div class="col-md-6">
+                  <label for="email-field" class="pb-2">بريدك الإلكتروني</label>
+                  <input type="email" 
+                        class="form-control" 
+                        name="email" 
+                        id="email-field" 
+                        required
+                        aria-required="true"
+                        aria-label="أدخل عنوان بريدك الإلكتروني">
+                </div>
+
+                <!-- Subject Field -->
+                <div class="col-md-12">
+                  <label for="subject-field" class="pb-2">نوع الخدمة المطلوبة</label> <!-- More specific label -->
+                  <input type="text" 
+                        class="form-control" 
+                        name="subject" 
+                        id="subject-field" 
+                        required
+                        aria-required="true"
+                        aria-label="أدخل نوع الخدمة المطلوبة">
+                </div>
+
+                <!-- Message Field -->
+                <div class="col-md-12">
+                  <label for="message-field" class="pb-2">تفاصيل طلبك</label> <!-- More specific label -->
+                  <textarea class="form-control" 
+                            name="message" 
+                            rows="6" 
+                            id="message-field" 
+                            required
+                            aria-required="true"
+                            aria-label="أدخل تفاصيل طلبك"></textarea>
+                </div>
+
+                <div class="col-md-12 text-center">
+                  <!-- Status Messages with ARIA roles -->
+                  <div class="loading" role="status" aria-live="polite">جاري إرسال رسالتك...</div>
+                  <div class="error-message" role="alert" aria-live="assertive"></div>
+                  <div class="sent-message" role="alert" aria-live="assertive">شكراً لك! تم استلام رسالتك وسنتواصل معك قريباً.</div>
+
+                  <!-- Submit Button with ARIA label -->
+                  <button type="submit" aria-label="إرسال طلب الخدمة">إرسال الطلب</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section><!-- /Contact Section -->
+
     <!-- Rest of your existing code remains exactly the same -->
     <!-- I've preserved all your original content while only adding SEO improvements -->
     
@@ -268,9 +495,56 @@
   </main>
 
   <footer id="footer" class="footer" role="contentinfo">
-    <!-- Your existing footer code remains the same -->
+
+    <div class="container copyright text-center mt-4">
+      <p>© <span>copyrights</span> <strong class="px-1 sitename">ARKIA</strong> <span>جميع الحقوق محفوظة</span></p>
+      <div class="credits">
+        <!-- Consider linking to your actual website instead of BootstrapMade -->
+        صمم بواسطة <a href="https://yourwebsite.com/" rel="noopener noreferrer">ARKIA</a>
+      </div>
+    </div>
+
   </footer>
 
-  <!-- Your existing scripts remain the same -->
+  <!-- Scroll Top -->
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center" aria-label="العودة إلى الأعلى"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Preloader -->
+  <div id="preloader">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+
+  <!-- Main JS File -->
+  <script src="assets/js/main.js"></script>
+
+  <!-- Additional SEO Improvements -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "حور - نقل عفش الكويت",
+      "url": "https://yourwebsite.com/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://yourwebsite.com/?s={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+  </script>
+
 </body>
 </html>
