--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش">
   
   <!-- Canonical URL (add your actual URL when live) -->
-  <!-- <link rel="canonical" href="https://yourdomain.com/" /> -->
+   <link rel="canonical" href="https://naqlafsha-hoor.com/" /> 
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -53,7 +53,7 @@
       "name": "حور لنقل العفش",
       "image": "assets/img/logo.png",
       "@id": "",
-      "url": "", <!-- Add your URL when live -->
+      "url": "https://naqlafsha-hoor.com/", <!-- Add your URL when live -->
       "telephone": "+96566401171",
       "address": {
         "@type": "PostalAddress",
@@ -107,30 +107,13 @@
   <!-- Added ARIA landmarks for better accessibility -->
   <header id="header" class="header sticky-top" role="banner" dir="rtl">
 
-    <div class="topbar d-flex align-items-center">
-      <div class="container d-flex justify-content-center justify-content-md-between">
-        <div class="contact-info d-flex align-items-center">
-          <!-- Added aria-label for better accessibility -->
-          <i class="bi bi-whatsapp d-flex align-items-center" aria-label="واتساب"><a href="https://wa.me/96566401171">&nbsp; واتساب </a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4" aria-label="اتصل بنا"><span><a href="tel:+96566401171">&nbsp; 66401171 </a></span></i>
-        </div>
-        <div class="social-links d-none d-md-flex align-items-center">
-          <!-- Added rel="noopener noreferrer" for security -->
-          <!-- <a href="#" class="twitter" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></a> -->
-          <a href="https://wa.me/96566401171" class="whatsapp" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
-          <a href="https://www.instagram.com/naqlafsha_hoor/" class="instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-          <a href="tel:+96566401171" class="linkedin" rel="noopener noreferrer"><i class="bi bi-telephone"></i></a>
-        </div>
-      </div>
-    </div><!-- End Top Bar -->
-
     <div class="branding d-flex align-items-cente">
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <!-- Added aria-label for logo link -->
         <a href="index.html" class="logo d-flex align-items-center" aria-label="الصفحة الرئيسية">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/hoors/img/logo.png" alt="حور لنقل العفش"> -->
+          <img src="assets/img/hoors/img/logo.png" alt="حور لنقل العفش"> 
           <h1 class="sitename">حور</h1>
         </a>
 
@@ -1225,19 +1208,22 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4">
-          <div class="col-lg-5">
+          <div class="col-lg-4">
             <div class="info-wrap">
               <!-- Contact Info Item 1 -->
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
+              <div class="info-item d-flex mb-0" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0" aria-hidden="true"></i>
                 <div class="mx-3">
                   <h3>موقعنا</h3>
                   <p>الكويت - جميع المناطق</p> <!-- More specific location helps local SEO -->
                 </div>
               </div>
-
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info-wrap">
               <!-- Contact Info Item 2 -->
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
+              <div class="info-item d-flex mb-0" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0" aria-hidden="true"></i>
                 <div class="mx-3">
                   <h3>اتصل بنا</h3>
@@ -1248,14 +1234,19 @@
                   <p>
                     <a href="tel:+96566401171" 
                       aria-label="اتصل بنا على رقم ٦٦٤٠١١٧١">
-                      ٦٦٤٠١١٧١ <span dir="ltr">(+965)</span>
+                      66401171 <span dir="ltr">(+965)</span>
                     </a>
                   </p>
                 </div>
               </div>
 
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info-wrap">
+
               <!-- Contact Info Item 3 -->
-              <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
+              <div class="info-item d-flex mb-0" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0" aria-hidden="true"></i>
                 <div class="mx-3">
                   <h3>البريد الإلكتروني</h3>
@@ -1274,73 +1265,6 @@
             </div>
           </div>
 
-          <div class="col-lg-7">
-            <!-- 
-              Enhanced form with proper accessibility attributes
-              Important for both usability and SEO
-            -->
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <div class="row gy-4">
-                <!-- Name Field -->
-                <div class="col-md-6">
-                  <label for="name-field" class="pb-2">اسمك الكامل</label> <!-- More descriptive label -->
-                  <input type="text" 
-                        name="name" 
-                        id="name-field" 
-                        class="form-control" 
-                        required
-                        aria-required="true"
-                        aria-label="أدخل اسمك الكامل">
-                </div>
-
-                <!-- Email Field -->
-                <div class="col-md-6">
-                  <label for="email-field" class="pb-2">بريدك الإلكتروني</label>
-                  <input type="email" 
-                        class="form-control" 
-                        name="email" 
-                        id="email-field" 
-                        required
-                        aria-required="true"
-                        aria-label="أدخل عنوان بريدك الإلكتروني">
-                </div>
-
-                <!-- Subject Field -->
-                <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">نوع الخدمة المطلوبة</label> <!-- More specific label -->
-                  <input type="text" 
-                        class="form-control" 
-                        name="subject" 
-                        id="subject-field" 
-                        required
-                        aria-required="true"
-                        aria-label="أدخل نوع الخدمة المطلوبة">
-                </div>
-
-                <!-- Message Field -->
-                <div class="col-md-12">
-                  <label for="message-field" class="pb-2">تفاصيل طلبك</label> <!-- More specific label -->
-                  <textarea class="form-control" 
-                            name="message" 
-                            rows="6" 
-                            id="message-field" 
-                            required
-                            aria-required="true"
-                            aria-label="أدخل تفاصيل طلبك"></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <!-- Status Messages with ARIA roles -->
-                  <div class="loading" role="status" aria-live="polite">جاري إرسال رسالتك...</div>
-                  <div class="error-message" role="alert" aria-live="assertive"></div>
-                  <div class="sent-message" role="alert" aria-live="assertive">شكراً لك! تم استلام رسالتك وسنتواصل معك قريباً.</div>
-
-                  <!-- Submit Button with ARIA label -->
-                  <button type="submit" aria-label="إرسال طلب الخدمة">إرسال الطلب</button>
-                </div>
-              </div>
-            </form>
-          </div>
         </div>
       </div>
     </section><!-- /Contact Section -->
