--- a/index.html
+++ b/index.html
@@ -102,30 +102,13 @@
   <!-- Added ARIA landmarks for better accessibility -->
   <header id="header" class="header sticky-top" role="banner" dir="rtl">
 
-    <div class="topbar d-flex align-items-center">
-      <div class="container d-flex justify-content-center justify-content-md-between">
-        <div class="contact-info d-flex align-items-center">
-          <!-- Added aria-label for better accessibility -->
-          <i class="bi bi-whatsapp d-flex align-items-center" aria-label="واتساب"><a href="https://wa.me/96566401171">&nbsp; واتساب </a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4" aria-label="اتصل بنا"><span><a href="tel:+96566401171">&nbsp; 66401171 </a></span></i>
-        </div>
-        <div class="social-links d-none d-md-flex align-items-center">
-          <!-- Added rel="noopener noreferrer" for security -->
-          <!-- <a href="#" class="twitter" rel="noopener noreferrer"><i class="bi bi-twitter-x"></i></a> -->
-          <a href="https://wa.me/96566401171" class="whatsapp" rel="noopener noreferrer"><i class="bi bi-whatsapp"></i></a>
-          <a href="https://www.instagram.com/naqlafsha_hoor/" class="instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-          <a href="tel:+96566401171" class="linkedin" rel="noopener noreferrer"><i class="bi bi-telephone"></i></a>
-        </div>
-      </div>
-    </div><!-- End Top Bar -->
-
     <div class="branding d-flex align-items-cente">
 
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <!-- Added aria-label for logo link -->
         <a href="index.html" class="logo d-flex align-items-center" aria-label="الصفحة الرئيسية">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/hoors/img/logo.png" alt="حور لنقل العفش"> -->
+          <img src="assets/img/hoors/img/logo.png" alt="حور لنقل العفش">
           <h1 class="sitename">حور</h1>
         </a>
 
@@ -380,7 +363,7 @@
                   <a href="portfolio-details.html?project=house1" 
                     aria-label="تفاصيل مشروع نقل منزل"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -405,7 +388,7 @@
                   <a href="portfolio-details.html?project=office1" 
                     aria-label="تفاصيل مشروع نقل مكتب"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -430,7 +413,7 @@
                   <a href="portfolio-details.html?project=appliances1" 
                     aria-label="تفاصيل مشروع نقل أجهزة"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -455,7 +438,7 @@
                   <a href="portfolio-details.html?project=express1" 
                     aria-label="تفاصيل مشروع نقل عاجل"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -480,7 +463,7 @@
                   <a href="portfolio-details.html?project=luxury1" 
                     aria-label="تفاصيل مشروع نقل أثاث فاخر"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -505,7 +488,7 @@
                   <a href="portfolio-details.html?project=packing1" 
                     aria-label="تفاصيل مشروع التغليف"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -530,7 +513,7 @@
                   <a href="portfolio-details.html?project=local1" 
                     aria-label="تفاصيل مشروع نقل داخلي"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -555,7 +538,7 @@
                   <a href="portfolio-details.html?project=storage1" 
                     aria-label="تفاصيل مشروع نقل للتخزين"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -580,7 +563,7 @@
                   <a href="portfolio-details.html?project=heavy1" 
                     aria-label="تفاصيل مشروع نقل معدات"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -605,7 +588,7 @@
                   <a href="portfolio-details.html?project=commercial1" 
                     aria-label="تفاصيل مشروع نقل بضائع"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -630,7 +613,7 @@
                   <a href="portfolio-details.html?project=small-apartment" 
                     aria-label="تفاصيل مشروع نقل الشقق الصغيرة"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -655,7 +638,7 @@
                   <a href="portfolio-details.html?project=villa-moving" 
                     aria-label="تفاصيل مشروع نقل الفلل"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -680,7 +663,7 @@
                   <a href="portfolio-details.html?project=hotel-moving" 
                     aria-label="تفاصيل مشروع نقل الفنادق"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -705,7 +688,7 @@
                   <a href="portfolio-details.html?project=full-packing" 
                     aria-label="تفاصيل خدمة التغليف الشامل"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -730,7 +713,7 @@
                   <a href="portfolio-details.html?project=international" 
                     aria-label="تفاصيل خدمة النقل الخارجي"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -755,7 +738,7 @@
                   <a href="portfolio-details.html?project=assembly" 
                     aria-label="تفاصيل خدمة الفك والتركيب"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -780,7 +763,7 @@
                   <a href="portfolio-details.html?project=seasonal" 
                     aria-label="تفاصيل خدمة النقل الموسمي"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -805,7 +788,7 @@
                   <a href="portfolio-details.html?project=medical" 
                     aria-label="تفاصيل خدمة النقل الطبي"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -830,7 +813,7 @@
                   <a href="portfolio-details.html?project=government" 
                     aria-label="تفاصيل خدمة النقل الحكومي"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -869,7 +852,7 @@
                   <a href="portfolio-details.html?project=art-gallery" 
                     aria-label="تفاصيل خدمة نقل المعارض"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -894,7 +877,7 @@
                   <a href="portfolio-details.html?project=warehouse" 
                     aria-label="تفاصيل خدمة نقل المخازن"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -919,7 +902,7 @@
                   <a href="portfolio-details.html?project=admin-office" 
                     aria-label="تفاصيل خدمة النقل الإداري"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -944,7 +927,7 @@
                   <a href="portfolio-details.html?project=school" 
                     aria-label="تفاصيل خدمة نقل المدارس"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -969,7 +952,7 @@
                   <a href="portfolio-details.html?project=wedding-hall" 
                     aria-label="تفاصيل خدمة نقل صالات الأفراح"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -994,7 +977,7 @@
                   <a href="portfolio-details.html?project=theater" 
                     aria-label="تفاصيل خدمة نقل المسارح"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -1019,7 +1002,7 @@
                   <a href="portfolio-details.html?project=gym" 
                     aria-label="تفاصيل خدمة نقل الصالات الرياضية"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -1044,7 +1027,7 @@
                   <a href="portfolio-details.html?project=door1" 
                     aria-label="تفاصيل خدمة النقل الكاملة"
                     class="details-link">
-                    <i class="bi bi-link-45deg"></i>
+                    <!-- <i class="bi bi-link-45deg"></i> -->
                   </a>
                 </div>
               </div>
@@ -1120,7 +1103,7 @@
                 <h4>أسرار النقل السريع للعفش</h4>
                 <span class="article-date">15 يونيو 2023</span>
                 <p>تعرف على كيفية نقل أثاثك في وقت قياسي مع الحفاظ على سلامته</p>
-                <a href="article.html?article=speed-moving" class="read-more" aria-label="قراءة المزيد عن النقل السريع">
+                <a href="article-view.html?article=speed-moving" class="read-more" aria-label="قراءة المزيد عن النقل السريع">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -1138,7 +1121,7 @@
                 <h4>دليل التغليف الآمن للأثاث</h4>
                 <span class="article-date">2 يوليو 2023</span>
                 <p>أفضل الطرق لتغليف مختلف أنواع الأثاث والأجهزة الكهربائية</p>
-                <a href="article.html?article=packing-guide" class="read-more" aria-label="قراءة المزيد عن تغليف الأثاث">
+                <a href="article-view.html?article=packing-guide" class="read-more" aria-label="قراءة المزيد عن تغليف الأثاث">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -1156,7 +1139,7 @@
                 <h4>النقل الموسمي في الكويت</h4>
                 <span class="article-date">20 أغسطس 2023</span>
                 <p>توقيتات مثالية لتجنب الحرارة والازدحام أثناء نقل الأثاث</p>
-                <a href="article.html?article=seasonal-moving" class="read-more" aria-label="قراءة المزيد عن النقل الموسمي">
+                <a href="article-view.html?article=seasonal-moving" class="read-more" aria-label="قراءة المزيد عن النقل الموسمي">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -1174,7 +1157,7 @@
                 <h4>نقل المكاتب باحترافية</h4>
                 <span class="article-date">5 سبتمبر 2023</span>
                 <p>كيف تنقل مكتبك بدون توقف العمل وخسارة الزبائن</p>
-                <a href="article.html?article=office-moving" class="read-more" aria-label="قراءة المزيد عن نقل المكاتب">
+                <a href="article-view.html?article=office-moving" class="read-more" aria-label="قراءة المزيد عن نقل المكاتب">
                   اقرأ المزيد <i class="bi bi-arrow-left"></i>
                 </a>
               </div>
@@ -1340,7 +1323,7 @@
       <p>© <span>copyrights</span> <strong class="px-1 sitename">ARKIA</strong> <span>جميع الحقوق محفوظة</span></p>
       <div class="credits">
         <!-- Consider linking to your actual website instead of BootstrapMade -->
-        صمم بواسطة <a href="https://yourwebsite.com/" rel="noopener noreferrer">ARKIA</a>
+        صمم بواسطة <a href="https://wa.me/201022049740" rel="noopener noreferrer">ARKIA</a>
       </div>
     </div>
 
