--- a/article.html
+++ b/article.html
@@ -178,7 +178,7 @@
       <p>© <span>copyrights</span> <strong class="px-1 sitename">ARKIA</strong> <span>جميع الحقوق محفوظة</span></p>
       <div class="credits">
         <!-- Consider linking to your actual website instead of BootstrapMade -->
-        صمم بواسطة <a href="https://yourwebsite.com/" rel="noopener noreferrer">ARKIA</a>
+        صمم بواسطة <a href="https://naqlafsha-hoor.com/" rel="noopener noreferrer">ARKIA</a>
       </div>
     </div>
 
@@ -238,10 +238,10 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "حور - نقل عفش الكويت",
-      "url": "https://yourwebsite.com/",
+      "url": "https://naqlafsha-hoor.com/",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://yourwebsite.com/?s={search_term_string}",
+        "target": "https://naqlafsha-hoor.com/?s={search_term_string}",
         "query-input": "required name=search_term_string"
       }
     }
