--- a/article-view.html
+++ b/article-view.html
@@ -5,15 +5,6 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<<<<<<< HEAD
-  <title>مقالات نقل العفش | حور - نقل عفش الكويت</title>
-  
-  <meta name="description" content="مقالات ونصائح عن نقل العفش في الكويت - دليلك الشامل لنقل آمن وسريع">
-  
-  <!-- Favicons -->
-  <link href="assets/img/hoors/img/logo.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-=======
   <!-- Enhanced Title Tag with Primary Keyword First -->
   <title>مقالات نقل العفش | نصائح وتجارب | حور لنقل العفش</title>
   
@@ -24,7 +15,7 @@
   <meta name="keywords" content="مقالات نقل العفش, نصائح نقل الأثاث, تغليف العفش, نقل عفش آمن, نقل أثاث الكويت, شركة نقل عفش, نصائح نقل المنزل, نقل عفش محترف">
   
   <!-- Canonical URL (add your actual URL when live) -->
-  <!-- <link rel="canonical" href="https://yourdomain.com/article-view.html" /> -->
+  <!-- <link rel="canonical" href="https://naqlafsha-hoor.com/article-view.html" /> -->
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -39,7 +30,7 @@
   <meta property="og:title" content="مقالات نقل العفش | نصائح وتجارب | حور لنقل العفش">
   <meta property="og:description" content="مقالات ونصائح عن نقل العفش في الكويت - تعرف على أفضل الطرق لتغليف ونقل الأثاث، نصائح من خبراء نقل العفش، وأحدث التقنيات المستخدمة">
   <meta property="og:type" content="article">
-  <!-- <meta property="og:url" content="https://yourdomain.com/article-view.html"> -->
+  <!-- <meta property="og:url" content="https://naqlafsha-hoor.com/article-view.html"> -->
   <meta property="og:image" content="assets/img/logo.png">
   <meta property="og:locale" content="ar_KW">
 
@@ -88,7 +79,6 @@
       ]
     }
   </script>
->>>>>>> 77652c15405739f6be9673a7ad724d54bd92dd2f
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -105,14 +95,11 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
-<<<<<<< HEAD
-=======
   <!-- Preload Critical Resources -->
   <link rel="preload" href="assets/img/hoors/img/logo.png" as="image">
   <link rel="preload" href="assets/vendor/bootstrap/css/bootstrap.rtl.min.css" as="style">
   <link rel="preload" href="assets/css/main.css" as="style">
 
->>>>>>> 77652c15405739f6be9673a7ad724d54bd92dd2f
   <style>
     .article-container {
       padding: 40px 0;
@@ -123,8 +110,6 @@
     .article-meta {
       color: #666;
       margin-bottom: 20px;
-<<<<<<< HEAD
-=======
       display: flex;
       flex-wrap: wrap;
       gap: 15px;
@@ -145,14 +130,11 @@
       margin: 0 5px 5px 0;
       padding: 8px 12px;
       font-size: 0.9em;
->>>>>>> 77652c15405739f6be9673a7ad724d54bd92dd2f
     }
     .article-content {
       line-height: 1.8;
       font-size: 1.1em;
     }
-<<<<<<< HEAD
-=======
     .article-content h2 {
       margin: 30px 0 20px;
       color: #333;
@@ -167,7 +149,6 @@
     .article-content li {
       margin-bottom: 10px;
     }
->>>>>>> 77652c15405739f6be9673a7ad724d54bd92dd2f
     .article-image {
       max-width: 100%;
       height: auto;
@@ -179,8 +160,6 @@
       padding-top: 30px;
       border-top: 1px solid #eee;
     }
-<<<<<<< HEAD
-=======
     .related-articles h3 {
       margin-bottom: 25px;
       color: #333;
@@ -200,7 +179,6 @@
       color: #666;
       margin-bottom: 15px;
     }
->>>>>>> 77652c15405739f6be9673a7ad724d54bd92dd2f
     .loading-spinner {
       display: none;
       text-align: center;
