--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -15,7 +15,7 @@
   <meta name="keywords" content="تفاصيل نقل العفش, مشروع نقل أثاث, نقل عفش الكويت, شركة نقل عفش, نقل أثاث آمن, نقل عفش محترف, نقل منازل, نقل مكاتب">
   
   <!-- Canonical URL (add your actual URL when live) -->
-  <!-- <link rel="canonical" href="https://yourdomain.com/portfolio-details.html" /> -->
+  <!-- <link rel="canonical" href="https://naqlafsha-hoor.com/portfolio-details.html" /> -->
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -30,7 +30,7 @@
   <meta property="og:title" content="تفاصيل المشروع | حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171">
   <meta property="og:description" content="تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث">
   <meta property="og:type" content="article">
-  <!-- <meta property="og:url" content="https://yourdomain.com/portfolio-details.html"> -->
+  <!-- <meta property="og:url" content="https://naqlafsha-hoor.com/portfolio-details.html"> -->
   <meta property="og:image" content="assets/img/logo.png">
   <meta property="og:locale" content="ar_KW">
 
