--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         <!-- Added aria-label for logo link -->
         <a href="index.html" class="logo d-flex align-items-center" aria-label="الصفحة الرئيسية">
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <img src="assets/img/hoors/img/logo.png" alt="حور لنقل العفش">
-          <!-- <img src="assets/img/hoors/img/logo.png" alt="حور لنقل العفش">  -->
+          <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش">
+          <!-- <img src="assets/img/logo.png" alt="حور لنقل العفش">  -->
           <h1 class="sitename">حور</h1>
         </a>
 
@@ -193,7 +193,7 @@
 
           <div class="col-lg-5" data-aos="fade-up" data-aos-delay="100">
             <!-- Added alt text with keyword -->
-            <img src="assets/img/logo.png" alt="حور - شركة نقل عفش الكويت" class="img-fluid">
+            <img src="assets/img/logo-rmbg.png" alt="حور - شركة نقل عفش الكويت" class="img-fluid">
           </div>
 
           <div class="col-lg-7 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
@@ -689,7 +689,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="article-card">
               <div class="article-img">
-                <img src="assets/img/logo.png" class="img-fluid" 
+                <img src="assets/img/articles/fast-2.jpg" class="img-fluid" 
                     alt="كيفية نقل العفش بسرعة في الكويت" loading="lazy">
               </div>
               <div class="article-info">
@@ -707,7 +707,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="article-card">
               <div class="article-img">
-                <img src="assets/img/logo.png" class="img-fluid" 
+                <img src="assets/img/articles/secure-1.jpg" class="img-fluid" 
                     alt="نصائح تغليف الأثاث لحمايته أثناء النقل" loading="lazy">
               </div>
               <div class="article-info">
@@ -725,7 +725,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="article-card">
               <div class="article-img">
-                <img src="assets/img/logo.png" class="img-fluid" 
+                <img src="assets/img/articles/seazon-1.jpg" class="img-fluid" 
                     alt="أفضل أوقات نقل العفش في الكويت" loading="lazy">
               </div>
               <div class="article-info">
@@ -743,7 +743,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="article-card">
               <div class="article-img">
-                <img src="assets/img/logo.png" class="img-fluid" 
+                <img src="assets/img/articles/naql-1.jpg" class="img-fluid" 
                     alt="نقل المكاتب التجارية دون تعطيل العمل" loading="lazy">
               </div>
               <div class="article-info">
