articles root css

--- a/article-view.html
+++ b/article-view.html
@@ -89,374 +89,24 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/article.css" rel="stylesheet">
 
   <!-- Preload Critical Resources -->
   <link rel="preload" href="assets/img/hoors/img/logo.png" as="image">
   <link rel="preload" href="assets/vendor/bootstrap/css/bootstrap.rtl.min.css" as="style">
   <link rel="preload" href="assets/css/main.css" as="style">
+  <link rel="preload" href="assets/css/article.css" as="style">
 
   <style>
     :root {
       --primary-color: #0d6efd;
       --secondary-color: #6c757d;
-      --accent-color: #ffc107;
+      /* --accent-color: #ffc107; */
       --text-color: #333;
       --light-bg: #f8f9fa;
       --border-radius: 15px;
       --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
       --transition: all 0.3s ease;
-    }
-
-    body {
-      background-color: #f5f5f5;
-    }
-
-    /* Article Header */
-    .article-header {
-      background: linear-gradient(135deg, rgba(13, 110, 253, 0.95), rgba(13, 110, 253, 0.85)), 
-                  url('assets/img/pattern.png');
-      padding: 120px 0 60px;
-      margin-bottom: 50px;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .article-header::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: url('assets/img/overlay.png');
-      opacity: 0.1;
-    }
-
-    .article-header::after {
-      content: '';
-      position: absolute;
-      bottom: -30px;
-      left: 0;
-      right: 0;
-      height: 60px;
-      background: linear-gradient(to bottom right, transparent 49%, var(--primary-color) 50%);
-      transform: skewY(-3deg);
-    }
-
-    .article-title {
-      color: #fff;
-      font-size: 3rem;
-      margin-bottom: 1.5rem;
-      font-weight: 700;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-      position: relative;
-    }
-
-    .article-meta {
-      color: rgba(255, 255, 255, 0.9);
-      font-size: 1.2rem;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-    }
-
-    .article-meta span {
-      display: flex;
-      align-items: center;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 0.5rem 1rem;
-      border-radius: 30px;
-      backdrop-filter: blur(5px);
-    }
-
-    .article-meta i {
-      margin-left: 0.5rem;
-      color: var(--accent-color);
-    }
-
-    /* Article Content */
-    .article-content {
-      background: #fff;
-      border-radius: var(--border-radius);
-      box-shadow: var(--box-shadow);
-      padding: 3rem;
-      margin-top: -30px;
-      position: relative;
-      z-index: 1;
-    }
-
-    .article-content h2 {
-      color: var(--primary-color);
-      margin: 2.5rem 0 1.5rem;
-      font-weight: 700;
-      position: relative;
-      padding-bottom: 1rem;
-    }
-
-    .article-content h2::after {
-      content: '';
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 50px;
-      height: 3px;
-      background: var(--accent-color);
-      border-radius: 3px;
-    }
-
-    .article-content p {
-      margin-bottom: 1.5rem;
-      line-height: 1.8;
-      color: var(--text-color);
-    }
-
-    .article-content ul {
-      margin-bottom: 2rem;
-      padding-right: 1.5rem;
-    }
-
-    .article-content ul li {
-      margin-bottom: 1rem;
-      position: relative;
-      padding-right: 1.5rem;
-    }
-
-    .article-content ul li::before {
-      content: '•';
-      color: var(--primary-color);
-      font-weight: bold;
-      position: absolute;
-      right: 0;
-      font-size: 1.5rem;
-    }
-
-    /* Article Gallery */
-    .article-gallery {
-      margin: 3rem 0;
-      border-radius: var(--border-radius);
-      overflow: hidden;
-      box-shadow: var(--box-shadow);
-      position: relative;
-    }
-
-    .article-gallery::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(to bottom, rgba(0,0,0,0.2), transparent);
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    .article-gallery .swiper-slide {
-      height: 600px;
-      background-size: cover;
-      background-position: center;
-      transition: transform 0.3s ease;
-    }
-
-    .article-gallery .swiper-slide:hover {
-      transform: scale(1.02);
-    }
-
-    .article-gallery .swiper-button-next,
-    .article-gallery .swiper-button-prev {
-      color: #fff;
-      background: rgba(0, 0, 0, 0.5);
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      transition: var(--transition);
-    }
-
-    .article-gallery .swiper-button-next:hover,
-    .article-gallery .swiper-button-prev:hover {
-      background: var(--primary-color);
-      transform: scale(1.1);
-    }
-
-    .article-gallery .swiper-button-next:after,
-    .article-gallery .swiper-button-prev:after {
-      font-size: 1.5rem;
-    }
-
-    .article-gallery .swiper-pagination-bullet {
-      width: 12px;
-      height: 12px;
-      background: #fff;
-      opacity: 0.5;
-      transition: var(--transition);
-    }
-
-    .article-gallery .swiper-pagination-bullet-active {
-      opacity: 1;
-      background: var(--primary-color);
-      transform: scale(1.2);
-    }
-
-    /* Article Tags */
-    .article-tags {
-      margin: 3rem 0;
-      padding: 1.5rem;
-      background: var(--light-bg);
-      border-radius: var(--border-radius);
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
-    .article-tags span {
-      display: inline-block;
-      padding: 0.5rem 1.5rem;
-      background: var(--primary-color);
-      color: #fff;
-      border-radius: 30px;
-      font-size: 0.9rem;
-      transition: var(--transition);
-      cursor: pointer;
-    }
-
-    .article-tags span:hover {
-      transform: translateY(-3px);
-      box-shadow: var(--box-shadow);
-      background: var(--accent-color);
-    }
-
-    /* Share Buttons */
-    .article-share {
-      margin: 3rem 0;
-      padding: 2rem;
-      border-top: 1px solid #eee;
-      text-align: center;
-    }
-
-    .article-share h3 {
-      color: var(--text-color);
-      margin-bottom: 1.5rem;
-      font-size: 1.5rem;
-    }
-
-    .article-share a {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      width: 50px;
-      height: 50px;
-      margin: 0 0.8rem;
-      background: var(--primary-color);
-      color: #fff;
-      border-radius: 50%;
-      transition: var(--transition);
-      font-size: 1.2rem;
-    }
-
-    .article-share a:hover {
-      transform: translateY(-5px) rotate(360deg);
-      box-shadow: var(--box-shadow);
-    }
-
-    .article-share a.facebook:hover {
-      background: #1877f2;
-    }
-
-    .article-share a.instagram:hover {
-      background: #e4405f;
-    }
-
-    .article-share a.whatsapp:hover {
-      background: #25d366;
-    }
-
-    /* Related Articles */
-    .related-articles {
-      margin-top: 4rem;
-      padding-top: 3rem;
-      border-top: 1px solid #eee;
-    }
-
-    .related-articles h3 {
-      color: var(--text-color);
-      margin-bottom: 2rem;
-      font-size: 1.8rem;
-      text-align: center;
-    }
-
-    .related-article-card {
-      background: #fff;
-      border-radius: var(--border-radius);
-      overflow: hidden;
-      box-shadow: var(--box-shadow);
-      transition: var(--transition);
-      margin-bottom: 2rem;
-    }
-
-    .related-article-card:hover {
-      transform: translateY(-10px);
-    }
-
-    .related-article-card img {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-    }
-
-    .related-article-card .card-body {
-      padding: 1.5rem;
-    }
-
-    .related-article-card h4 {
-      color: var(--text-color);
-      margin-bottom: 1rem;
-      font-size: 1.2rem;
-    }
-
-    .related-article-card p {
-      color: var(--secondary-color);
-      margin-bottom: 1rem;
-      font-size: 0.9rem;
-    }
-
-    .related-article-card .read-more {
-      color: var(--primary-color);
-      text-decoration: none;
-      font-weight: 500;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .related-article-card .read-more:hover {
-      color: var(--accent-color);
-    }
-
-    @media (max-width: 768px) {
-      .article-header {
-        padding: 80px 0 40px;
-      }
-
-      .article-title {
-        font-size: 2rem;
-      }
-
-      .article-meta {
-        flex-direction: column;
-        gap: 1rem;
-      }
-
-      .article-content {
-        padding: 2rem;
-      }
-
-      .article-gallery .swiper-slide {
-        height: 300px;
-      }
-
-      .article-tags {
-        justify-content: center;
-      }
     }
   </style>
 </head>
@@ -467,6 +117,7 @@
   <header id="header" class="header sticky-top" role="banner">
     <div class="container d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
+        <img src="assets/img/logo-rmbg.png" alt="حور لنقل العفش">
         <h1 class="sitename">حور</h1>
       </a>
       <nav id="navmenu" class="navmenu">
