--- a/article-view.html
+++ b/article-view.html
@@ -15,7 +15,7 @@
   <meta name="keywords" content="مقالات نقل العفش, نصائح نقل الأثاث, تغليف العفش, نقل عفش آمن, نقل أثاث الكويت, شركة نقل عفش, نصائح نقل المنزل, نقل عفش محترف">
   
   <!-- Canonical URL (add your actual URL when live) -->
-  <!-- <link rel="canonical" href="https://naqlafsha-hoor.com/article-view.html" /> -->
+  <link rel="canonical" href="https://naqlafsha-hoor.com/article-view.html" />
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -25,7 +25,7 @@
   <meta property="og:title" content="مقالات نقل العفش | حور">
   <meta property="og:description" content="مقالات ونصائح عن نقل العفش في الكويت - نصائح عملية وأفكار مفيدة لنقل آمن وسريع">
   <meta property="og:type" content="article">
-  <!-- <meta property="og:url" content="https://naqlafsha-hoor.com/article-view.html"> -->
+  <meta property="og:url" content="https://naqlafsha-hoor.com/article-view.html">
   <meta property="og:image" content="assets/img/logo.png">
   <meta property="og:locale" content="ar_KW">
 
