--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       "name": "حور لنقل العفش",
       "image": "assets/img/logo.png",
       "@id": "",
-      "url": "https://naqlafsha-hoor.com/", <!-- Add your URL when live -->
+      "url": "https://naqlafsha-hoor.com/",
       "telephone": "+96566401171",
       "address": {
         "@type": "PostalAddress",
