--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -12,10 +12,10 @@
   <meta name="description" content="تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث">
   
   <!-- Expanded Keywords List -->
-  <meta name="keywords" content="تفاصيل نقل العفش, مشروع نقل أثاث, نقل عفش الكويت, شركة نقل عفش, نقل أثاث آمن, نقل عفش محترف, نقل منازل, نقل مكاتب">
+  <meta name="keywords" content="تفاصيل نقل العفش, مشروع نقل أثاث, نقل عفش الكويت, شركة نقل عفش, نقل أثاث آمن, نقل عفش محترف, نقل منازل, نقل مكاتب, نقل أجهزة كهربائية, نقل أثاث فاخر, تغليف الأثاث, نقل معدات ثقيلة, نقل بضائع تجارية, نقل شقق صغيرة, نقل الفلل, الكويت">
   
   <!-- Canonical URL (add your actual URL when live) -->
-  <!-- <link rel="canonical" href="https://naqlafsha-hoor.com/portfolio-details.html" /> -->
+  <link rel="canonical" href="https://naqlafsha-hoor.com/portfolio-details.html" />
   
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
@@ -27,18 +27,18 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Open Graph / Social Media Meta Tags -->
-  <meta property="og:title" content="تفاصيل المشروع | حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171">
-  <meta property="og:description" content="تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث">
-  <meta property="og:type" content="article">
-  <!-- <meta property="og:url" content="https://naqlafsha-hoor.com/portfolio-details.html"> -->
-  <meta property="og:image" content="assets/img/logo.png">
-  <meta property="og:locale" content="ar_KW">
+  <meta property="og:title" content="تفاصيل المشروع | حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171" />
+  <meta property="og:description" content="تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://naqlafsha-hoor.com/portfolio-details.html" />
+  <meta property="og:image" content="assets/img/logo.png" />
+  <meta property="og:locale" content="ar_KW" />
 
   <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="تفاصيل المشروع | حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171">
-  <meta name="twitter:description" content="تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث">
-  <meta name="twitter:image" content="assets/img/logo.png">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="تفاصيل المشروع | حور - نقل عفش الكويت | فك تركيب وتغليف 📦 66401171" />
+  <meta name="twitter:description" content="تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث" />
+  <meta name="twitter:image" content="assets/img/logo.png" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -55,6 +55,29 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- Structured Data for SEO -->
+  <meta name="geo.region" content="KW">
+  <meta name="geo.placename" content="Kuwait">
+  <meta name="ICBM" content="29.3759, 47.9774">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Product",
+    "name": "تفاصيل مشروع نقل العفش في الكويت",
+    "image": "https://naqlafsha-hoor.com/assets/img/logo.png",
+    "description": "تفاصيل مشروع نقل العفش في الكويت - تعرف على كيفية قيام فريق حور بنقل العفش باحترافية وسرعة مع الحفاظ على سلامة الأثاث",
+    "brand": {
+      "@type": "Brand",
+      "name": "حور لنقل العفش"
+    },
+    "offers": {
+      "@type": "Offer",
+      "priceCurrency": "KWD",
+      "availability": "https://schema.org/InStock"
+    }
+  }
+  </script>
+
 </head>
 
 <body class="portfolio-details-page">
@@ -64,7 +87,7 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:naqlafsha.hoor@gmail.com">naqlafsha.hoor@gmail.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -191,7 +214,7 @@
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: ASU Company</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project URL</strong>: <a href="https://naqlafsha-hoor.com/">https://naqlafsha-hoor.com/</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
@@ -239,7 +262,7 @@
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>naqlafsha.hoor@gmail.com</span></p>
           </div>
         </div>
 
