--- a/old-index.html
+++ b/old-index.html
@@ -706,7 +706,7 @@
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <p>naqlafsha.hoor@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
             </div>
