--- a/service-details.html
+++ b/service-details.html
@@ -5,8 +5,43 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Service Details - BizLand Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171">
+  <meta name="keywords" content="نقل عفش الكويت, نقل أثاث الكويت, فك وتركيب أثاث, شركة نقل عفش, Home Mover, تغليف عفش, نقل سريع, 66401171, نقل عفش من الباب للباب, شركة نقل موثوقة الكويت, نقل عفش رخيص, أفضل شركة نقل عفش, خدمات نقل العفش, نقل أثاث محترف, نقل مكاتب, نقل منازل, نقل أجهزة كهربائية, نقل أثاث فاخر, تغليف الأثاث, نقل معدات ثقيلة, نقل بضائع تجارية, نقل شقق صغيرة, نقل الفلل, الكويت">
+  <link rel="canonical" href="https://naqlafsha-hoor.com/service-details.html" />
+  <meta property="og:title" content="خدمات نقل العفش | حور - نقل عفش الكويت" />
+  <meta property="og:description" content="خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://naqlafsha-hoor.com/service-details.html" />
+  <meta property="og:image" content="assets/img/logo.png" />
+  <meta property="og:locale" content="ar_KW" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="خدمات نقل العفش | حور - نقل عفش الكويت" />
+  <meta name="twitter:description" content="خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171" />
+  <meta name="twitter:image" content="assets/img/logo.png" />
+  <meta name="geo.region" content="KW">
+  <meta name="geo.placename" content="Kuwait">
+  <meta name="ICBM" content="29.3759, 47.9774">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "نقل عفش الكويت",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "حور لنقل العفش",
+      "image": "https://naqlafsha-hoor.com/assets/img/logo.png",
+      "url": "https://naqlafsha-hoor.com/",
+      "telephone": "+96566401171",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "KW",
+        "addressLocality": "Kuwait"
+      }
+    },
+    "areaServed": "KW",
+    "description": "خدمات نقل العفش في الكويت من حور - نقل، فك، تركيب، وتغليف آمن بأحدث الأدوات. فريق مدرب، تغطية شاملة، تواصل معنا 66401171"
+  }
+  </script>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -43,7 +78,7 @@
     <div class="topbar d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">contact@example.com</a></i>
+          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:naqlafsha.hoor@gmail.com">naqlafsha.hoor@gmail.com</a></i>
           <i class="bi bi-phone d-flex align-items-center ms-4"><span>+1 5589 55488 55</span></i>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
@@ -190,7 +225,7 @@
             <p>A108 Adam Street</p>
             <p>New York, NY 535022</p>
             <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p><strong>Email:</strong> <span>naqlafsha.hoor@gmail.com</span></p>
           </div>
         </div>
 
